--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<meta name="og:site_name" content="Sohjeong & Jensen"/>
-		<link rel="canonical" href="https://jensenity.github.io/jensenitysohj.github.io/"/>
-		<meta name="twitter:url" content="https://jensenity.github.io/jensenitysohj.github.io/"/>
-		<meta name="og:url" content="https://jensenity.github.io/jensenitysohj.github.io/"/>
+		<link rel="canonical" href="https://sohjeongjensen.github.io"/>
+		<meta name="twitter:url" content="https://sohjeongjensen.github.io"/>
+		<meta name="og:url" content="https://sohjeongjensen.github.io"/>
 		<title>⛪🤵👰</title>
 		<meta name="twitter:title" content="Invitation to Sohjeong & Jensen's Pre Wedding"/>
 		<meta name="og:title" content="Invitation to Sohjeong & Jensen's Pre Wedding"/>
@@ -14,31 +14,30 @@
 		<meta name="og:description" content="2020년 11월 7일 우리 집"/>
 		<meta name="twitter:card" content="함께할 때 비로소 꺠닫는 사랑임을 영원히 기억하며 살겠습니다"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<link rel="stylesheet" href="/style.css" type="text/css"/>
+		<link rel="stylesheet" href="/Users/jensen/weddingInvitation/style.css" type="text/css"/>
 		<style>
 
 		</style>
 	</head>
 	<body>
-		<div class="imageContainer">
-		<img src="img/title.jpg" id="mainImage">
+		<div class="headerImageContainer">
+		<img src="img/header.png" id="headerImage">
+		</div>
+		<div class="middleImageContainer">
+			<img src="img/middle1.jpg" id="middleImage1">
+			<img src="img/middle2.jpg" id="middleImage2">
 		</div>
 		<br>
 		<h1> We want to invite you to our special day </h1>
 
 		<div id="parents">
-			</span> <span style="font-weight:bold"> Sohjeong Maeng 🤍 Jensen Yap </span><br>
-		</div>
-		<br>
-		<div class="middleImageContainer">
-			<img src="img/middle1.jpg" id="middleImage1">
-			<img src="img/middle2.jpg" id="middleImage2">
+			</span> <span style="font-weight:bold"> Sohjeong Maeng  💕Jensen Yap </span><br>
 		</div>
 		<h2> Greetings </h2>
 
-		<p class="poem">
+		<p class="greeting">
 		Hi Friends, <br> 
-		We've planned to have our biggest day together as a couple this coming November 7th, 2020 <br>
+		We've planned to have our biggest day together as a couple this coming November 7th, 2020. <br>
 		But due to Covid-19, we had to push back our wedding ceremony to May 15th, 2021. <br>
 		<br><i>
 		<b>Jeremiah 29:11 </b><br>
@@ -46,16 +45,16 @@
 		“For I know the plans I have for you, declares the Lord, <br> 
 		plans to prosper you and not to harm you, plans to give you hope and a future.“ </i><br>
 		<br>
-		But we are hopeful & rejoicing in this process <br>
+		We are hopeful & rejoicing in this process <br>
 		We trust that Our God, Our Heavenly Father has a good plan for us. <br>
-		Come join us if time allows in a small but special wedding ceremony. <br>
+		Come join us if time allows in a small but special pre-wedding ceremony. <br>
 		<br>
 		</p>
 		<br>
 
 		<h2>일시 및 장소</h2>
 		<div id="date">
-			2020년 11월 07일 토요일 오후 1시 30분 <br>
+			2020년 11월 07일 토요일 오후 12시 30분 <br>
 			A FLAT STUDIO - Rooftop <br>
 			<span id="address">서울 성동구 왕십리로16가길 30-2 Y&K 2 빌딩</span>
 		</div>
@@ -68,19 +67,18 @@
 		<br>
 		<br>
 		<p id="shuttle">
-			성수동 서울숲 부근 2호선 뚝섬역, 한양대역 도보로 각 5-7분거리<br> (14:30 ~ 17:30) <br>
-		2번 출구로 나오시면 안내 봉사자가 있습니다.
+			성수동 서울숲 부근 2호선 뚝섬역, 한양대역 도보로 각 5-7분거리<br> (12:30 ~ 15:30) <br>
 		</p>
 		<br>
 		<br>
 		<a href="https://www.icloud.com/sharedalbum/ko-kr/#B0AGWZuqD77Kcg" target="_blank">
 			<div class="grid-container">
-				<img class="grid-item" src="img/thumbnail1.png">
-				<img class="grid-item" src="img/thumbnail2.png">
-				<img class="grid-item" src="img/thumbnail3.png">
-				<img class="grid-item" src="img/thumbnail4.png">
-				<img class="grid-item" src="img/thumbnail5.png">
-				<img class="grid-item" src="img/thumbnail6.png">
+				<img class="grid-item" src="img/thumbnail1.jpg">
+				<img class="grid-item" src="img/thumbnail2.jpg">
+				<img class="grid-item" src="img/thumbnail3.jpg">
+				<img class="grid-item" src="img/thumbnail4.jpg">
+				<img class="grid-item" src="img/thumbnail5.jpg">
+				<img class="grid-item" src="img/thumbnail6.jpg">
 		  </div>
 		</a>
 		<footer>
@@ -98,7 +96,7 @@
 <script charset="UTF-8">
 	new daum.roughmap.Lander({
 		"timestamp" : "1597653753785",
-		"key" : "1757867797",
+		"key" : "2zok9",
 		"mapWidth" : "375",
 		"mapHeight" : "400"
 	}).render();
